# lyre

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  diesel.toml  lyre.db
migrations/2025-09-06-214632_create_voice_connections/: down.sql  up.sql
migrations/2025-09-06-215625_create_queue_history/: down.sql  up.sql
migrations/2025-09-06-215705_create_guild_settings/: up.sql
migrations/2025-09-06-215722_create_song_cache/: down.sql  up.sql
migrations/2025-09-06-queue-tracking/: down.sql  up.sql
src/: audio.rs  auth.rs  bot_bridge.rs  database.rs  env.rs  main.rs  metrics.rs  schema.rs  state.rs  voice_manager.rs  web.rs  web_api.rs  web_api_new.rs  web_api_old.rs
src/api/: analytics.rs  auth.rs  control.rs  dashboard.rs  dev_auth.rs  guilds.rs  health.rs  info.rs  maintenance.rs  mod.rs  oauth.rs  queue.rs  types.rs
src/commands/: mod.rs  next.rs  play.rs  stop.rs
src/database/: models.rs  schema.rs
src/database/models/: current_queue.rs  guild_settings.rs  mod.rs  queue_history.rs  song_cache.rs  voice_connections.rs
src/middleware/: auth.rs
static/: dashboard.html  dashboard.js
