[package]
name = "lyre"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
dirs = "6.0.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "utils", "cache"] }
songbird = { version = "0.5.0", features = ["serenity", "builtin-queue", "driver"] }
symphonia = { version = "0.5.4", default-features = false, features = ["mp3"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "process"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
which = "8.0.0"
dotenvy = "0.15.7"

[profile.dev]
# Optimize dev builds to reduce runtime hiccups without needing --release
opt-level = 2
